# model_trainer

./: .gitignore  GOOGL-5yr.csv  Makefile  README.md  config.yaml  main.py  model.h5  msft_model.h5  pyproject.toml  requierments.txt
model_trainer/: main.py  timescale.py
